Fixade ytterligare 2 problem